ECA-1099: replace all "new Integer" with "Integer.valueOf" which saves object creation/garbage collection.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@10397 37aeb1de-b14b-0410-9a0e-82b28170d228