@@ -424,9 +424,9 @@ public class AdminGroupsManagedBean extends BaseManagedBean {
 		if (resource.startsWith(AccessRulesConstants.CAPREFIX)) {
 			Map caIdToNameMap = EjbcaJSFHelper.getBean().getCAAdminSession().getCAIdToNameMap(getAdmin());
 			if(resource.lastIndexOf('/') < AccessRulesConstants.CAPREFIX.length()) {
-				return AccessRulesConstants.CAPREFIX + caIdToNameMap.get(new Integer(resource.substring(AccessRulesConstants.CAPREFIX.length())));
+				return AccessRulesConstants.CAPREFIX + caIdToNameMap.get(Integer.valueOf(resource.substring(AccessRulesConstants.CAPREFIX.length())));
 			} else {
-				return AccessRulesConstants.CAPREFIX + caIdToNameMap.get(new Integer(resource.substring(AccessRulesConstants.CAPREFIX.length(),
+				return AccessRulesConstants.CAPREFIX + caIdToNameMap.get(Integer.valueOf(resource.substring(AccessRulesConstants.CAPREFIX.length(),
 						resource.lastIndexOf('/')))) + resource.substring(resource.lastIndexOf('/'));
 			}
 		}
