@@ -248,7 +248,7 @@ public class MSCertTools {
 					// Loop through all fields in DN
 					HashMap hmFields = dnfe.getNumberOfFields();
 					for (int j=0; j<100; j++) {	// TODO: 100 is really an internal constant..
-						Integer fieldsOfType = (Integer) hmFields.get(new Integer(j));
+						Integer fieldsOfType = (Integer) hmFields.get(Integer.valueOf(j));
 						if (fieldsOfType != null) {
 							log.info("fieldsOfType="+fieldsOfType);
 							for (int k = 0; k<fieldsOfType; k++) {
