@@ -60,12 +60,12 @@ public class EnhancedEIDProfile extends EIDProfile {
     }
 
     private void init(){
-	  data.put(TYPE, new Integer(TYPE_ENHANCEDEID));
+	  data.put(TYPE, Integer.valueOf(TYPE_ENHANCEDEID));
       
       ArrayList certprofileids = new ArrayList(NUMBEROFCERTIFICATES);
-	  certprofileids.add(new Integer(SecConst.CERTPROFILE_FIXED_HARDTOKENSIGN)); 
-	  certprofileids.add(new Integer(SecConst.CERTPROFILE_FIXED_HARDTOKENAUTH)); 
-	  certprofileids.add(new Integer(SecConst.CERTPROFILE_FIXED_HARDTOKENENC)); 
+	  certprofileids.add(Integer.valueOf(SecConst.CERTPROFILE_FIXED_HARDTOKENSIGN)); 
+	  certprofileids.add(Integer.valueOf(SecConst.CERTPROFILE_FIXED_HARDTOKENAUTH)); 
+	  certprofileids.add(Integer.valueOf(SecConst.CERTPROFILE_FIXED_HARDTOKENENC)); 
 	  data.put(CERTIFICATEPROFILEID, certprofileids);
 	  
 	  ArrayList certWritable = new ArrayList(NUMBEROFCERTIFICATES);
@@ -75,21 +75,21 @@ public class EnhancedEIDProfile extends EIDProfile {
 	  data.put(CERTWRITABLE, certWritable);
 	  	  
 	  ArrayList caids = new ArrayList(NUMBEROFCERTIFICATES);
-	  caids.add(new Integer(CAID_USEUSERDEFINED)); 
-	  caids.add(new Integer(CAID_USEUSERDEFINED)); 
-	  caids.add(new Integer(CAID_USEUSERDEFINED)); 
+	  caids.add(Integer.valueOf(CAID_USEUSERDEFINED)); 
+	  caids.add(Integer.valueOf(CAID_USEUSERDEFINED)); 
+	  caids.add(Integer.valueOf(CAID_USEUSERDEFINED)); 
 	  data.put(CAID, caids);
 	  
 	  ArrayList pintypes = new ArrayList(NUMBEROFCERTIFICATES);
-	  pintypes.add(new Integer(PINTYPE_ASCII_NUMERIC));
-	  pintypes.add(new Integer(PINTYPE_ASCII_NUMERIC));
-	  pintypes.add(new Integer(PINTYPE_ENC_SAME_AS_AUTH));
+	  pintypes.add(Integer.valueOf(PINTYPE_ASCII_NUMERIC));
+	  pintypes.add(Integer.valueOf(PINTYPE_ASCII_NUMERIC));
+	  pintypes.add(Integer.valueOf(PINTYPE_ENC_SAME_AS_AUTH));
 	  data.put(PINTYPE, pintypes);
 	  
 	  ArrayList minpinlength = new ArrayList(NUMBEROFCERTIFICATES);
-	  minpinlength.add(new Integer(4));
-	  minpinlength.add(new Integer(4));
-	  minpinlength.add(new Integer(0));
+	  minpinlength.add(Integer.valueOf(4));
+	  minpinlength.add(Integer.valueOf(4));
+	  minpinlength.add(Integer.valueOf(0));
 	  data.put(MINIMUMPINLENGTH, minpinlength);
 	  
 	  ArrayList iskeyrecoverable = new ArrayList(NUMBEROFCERTIFICATES);
@@ -105,9 +105,9 @@ public class EnhancedEIDProfile extends EIDProfile {
 	  data.put(REUSEOLDCERTIFICATE, reuseoldcertificate);
 
 	  ArrayList minimumkeylength = new ArrayList(NUMBEROFCERTIFICATES);
-	  minimumkeylength.add(new Integer(2048));
-	  minimumkeylength.add(new Integer(2048));
-	  minimumkeylength.add(new Integer(2048));
+	  minimumkeylength.add(Integer.valueOf(2048));
+	  minimumkeylength.add(Integer.valueOf(2048));
+	  minimumkeylength.add(Integer.valueOf(2048));
 	  data.put(MINIMUMKEYLENGTH, minimumkeylength);	  
 
 	  ArrayList keytypes = new ArrayList(NUMBEROFCERTIFICATES);
@@ -156,9 +156,9 @@ public class EnhancedEIDProfile extends EIDProfile {
 			
 			if(data.get(MINIMUMPINLENGTH) == null){
 				ArrayList minpinlength = new ArrayList(NUMBEROFCERTIFICATES);
-				minpinlength.add(new Integer(4));
-				minpinlength.add(new Integer(4));
-				minpinlength.add(new Integer(0));
+				minpinlength.add(Integer.valueOf(4));
+				minpinlength.add(Integer.valueOf(4));
+				minpinlength.add(Integer.valueOf(0));
 				data.put(MINIMUMPINLENGTH, minpinlength);
 			}
 			
